# pyansys

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.local.json
pyansys-uv-project/: .env.example  .netrc.example  README.md  TROUBLESHOOTING.md  launcher-fixed.py  launcher.py  main.py  pyproject.toml  start-fixed.bat  start.bat  start.sh  uv.toml
